60-gateway-routes/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-ui
  namespace: observability
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - grafana.dev.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
