60-gateway-routes/infisical-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical-ui
  namespace: infisical
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - infisical.dev.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infisical-infisical-standalone-infisical
          port: 8080
