60-gateway-routes/minio-console-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-ui
  namespace: observability
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - minio-console.dev.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-console
          port: 9001
