60-gateway-routes/tekton-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard-ui
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - tekton.dev.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
